[ADD AUTH] Correction de la mise en place du middleware d'auth
